--- a/content-web/angular.json
+++ b/content-web/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "content-web"
+    }
+  },
+  "defaultProject": "content-web",
+  "cli": {
+    "analytics": "291f8667-e7d3-499e-b67c-1de382a2c1ac"
+  }
 }
